# go-vs-rust

./: LICENSE.md  README.md
go/: .gitignore  .ninja_log  build.ninja  fib.go  fib_gmp.go  go.mod  go.sum  http.go
rust/: Cargo.toml
rust/src/: fib.rs  http.rs
