[package]
name = "rust"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fib"
path = "./src/fib.rs"

[[bin]]
name = "http"
path = "./src/http.rs"

[dependencies]
rug = "1.9.0"
warp = "0.2.3"
tokio = {version = "0.2.21", features=["full"]}
